fixed alignment on a few buttons, changed button font

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,10 @@ ul {
   padding-left: 16px;
 }
 
+button {
+    font-family: proxima-nova, sans-serif;
+}
+
 /* Side panel buttons */
 
 .openList {
@@ -505,11 +509,10 @@ h4 {
   justify-content: space-between;
   background-color: white;
   border-radius: 15px;
-  margin-top: 8px;
   align-items: center;
   box-shadow: #00000040 0 6px 6px;
   align-self: center;
-  padding: 0px 8px 0px 8px;
+  padding: 0 8px 0 8px;
   margin-top: 16px;
 
 }
@@ -519,7 +522,7 @@ h4 {
   border-radius: 20px;
   width: 30px;
   height: 30px;
-  align-content: center;
+  /*align-content: center;*/
   background-color: white;
 }
 
@@ -528,7 +531,7 @@ h4 {
   border-radius: 20px;
   width: 30px;
   height: 30px;
-  align-content: center;
+  /*align-content: center;*/
   background-color: white;
 }
 
@@ -536,15 +539,15 @@ h4 {
   font-weight: bold;
   width: 120px;
   height: 35px;
-  background: none;
+  /*background: none;*/
   border-radius: 15px;
   border: 1px solid black;
   cursor: pointer;
   align-self: flex-end;
-  margin: 4px 4px 8px 8px;
+  margin: 4px 8px 4px 8px;
   opacity: 1;
   transition: opacity 0.5s ;
-  padding: 0px 8px 0px 8px;
+  padding: 0 10px 0 10px;
   
 
   display:flex;
@@ -564,7 +567,7 @@ h4 {
 }
 
 
-.sidebuttons {
+.sideButtons {
   display: flex;
   flex: 1 1;
   flex-direction: column; /* Stack buttons vertically */
